@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+socket/info.c, server/alchemy.c, server/gods.c: Fix some minor issues (using 0
+  instead of NULL [leading to confusing code], casting const char* to char*).
+Arvid Norlander 2009-02-06
+
 include/global.h: Get rid of some warnings by making some "char*" "const char*"
   in the Settings struct.
 Arvid Norlander 2009-02-06
